--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
           filters:
             - StripPrefix=2
         - id: service-empleado
-          uri: http://localhost:8009
+          uri: https://service-empleado.azurewebsites.net
           predicates:
             - Path=/api/rrhh/**
           filters:
@@ -76,4 +76,4 @@ spring:
             - StripPrefix=2
 
 server:
-  port: 9000
+  port: ${PORT:9000}
