--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
           enabled: true
       routes:
         - id: service-producto
-          uri: http://localhost:8001
+          uri: https://service-producto.azurewebsites.net
           predicates:
             - Path=/api/almacen/**
           filters:
@@ -39,13 +39,13 @@ spring:
           filters:
             - StripPrefix=2
         - id: service-doc-compra
-          uri: http://localhost:8008
+          uri: https://service-doc-compra.azurewebsites.net
           predicates:
             - Path=/api/doc-compra/**
           filters:
             - StripPrefix=2
         - id: service-cotizacion
-          uri: http://localhost:8005
+          uri: https://service-cotizacion.azurewebsites.net
           predicates:
             - Path=/api/cotizacion/**
           filters:
@@ -63,7 +63,7 @@ spring:
           filters:
             - StripPrefix=2
         - id: service-proveedor
-          uri: http://localhost:8010
+          uri: https://service-proveedor.azurewebsites.net
           predicates:
             - Path=/api/proveedor/**
           filters:
