--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,13 +51,13 @@ spring:
           filters:
             - StripPrefix=2
         - id: service-cliente
-          uri: http://localhost:3001
+          uri: https://service-cliente.azurewebsites.net
           predicates:
             - Path=/api/cliente/**
           filters:
             - StripPrefix=2
         - id: service-pedido
-          uri: http://localhost:3002
+          uri: https://service-pedido.azurewebsites.net
           predicates:
             - Path=/api/pedido/**
           filters:
@@ -69,7 +69,7 @@ spring:
           filters:
             - StripPrefix=2
         - id: service-factura-venta
-          uri: http://localhost:3003
+          uri: https://service-factura.azurewebsites.net
           predicates:
             - Path=/api/facturaventa/**
           filters:
